src/renderer/_variables.scss
// Variables for globally customizing Bootstrap should be put in here.
@import "../../node_modules/bootstrap/scss/functions";

// Responsiveness
$center-column-breakpoint: md;
$above-center-column-breakpoint: lg;
$below-center-column-breakpoint: sm;

$wide-column-breakpoint: lg;
$above-wide-column-breakpoint: xl;
$below-wide-column-breakpoint: md;

// tale:net colors
$tale-black: #000000;
$tale-dark-grey: #1e1e1e;
$tale-grey: #373636;
$tale-light-grey: #d5d3d3;
$tale-white: #ffffff;
$tale-blue: #c1ffff;
$tale-dark-blue: #4ea2c2;
$tale-yellow: #f2ff4d;
$tale-green: #42f480;
$tale-red: #ff0047;

// General font styling
$font-family-monospace: "SFMono-Regular", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
$font-family-base: "OpenSansRegular";
$font-family-body: "LoraRegular";
$font-size-base: 1.125rem;
$font-size-lg: $font-size-base * 1.25;
$font-size-sm: $font-size-base * .8;
$font-size-body: $font-size-base;
$headings-font-weight: bold;

// Markdown
$font-family-markdown: $font-family-body;
$font-size-markdown: $font-size-body;
$markdown-h1-font-size: $font-size-markdown * 1.5;
$markdown-h2-font-size: $font-size-markdown * 1.4;
$markdown-h3-font-size: $font-size-markdown * 1.3;
$markdown-h4-font-size: $font-size-markdown * 1.2;
$markdown-h5-font-size: $font-size-markdown * 1.1;
$markdown-h6-font-size: $font-size-markdown;


// Bootstrap colors
$danger: $tale-red;
$warning: $tale-yellow;
$primary: $tale-blue;
$success: $tale-green;

// Tooltips
$tooltip-bg: $tale-blue;
$tooltip-color: $tale-dark-grey;

// Loading animation
$loading-animation-sizes: (
  xs: 1rem,
  sm: 1.75rem,
  md: 2.5rem,
  lg: 3rem,
  xl: 4rem
);
$loading-animation-color: $tale-blue;
$loading-animation-duration: 3s;

// Connection activity indicator
$connection-activity-indicator-bg: $tale-grey;
$connection-activity-indicator-border-color: $tale-blue;
$connection-activity-indicator-connected-bg: $tale-green;
$connection-activity-indicator-connected-border-color: $tale-green;
$connection-activity-indicator-disconnected-bg: $tale-red;
$connection-activity-indicator-disconnected-border-color: $tale-red;

// Images
$hexagon-image-border-color: $tale-blue;
$hexagon-image-bg: $tale-grey;

// General dimensions
$base-offset-x: 1rem;
$base-offset-y: 1rem;

// Navbars
$navbar-dark-color: $tale-blue;
$navbar-border-color: $tale-blue;
$navbar-border-width: 1px;
$navbar-padding-x: 0;
$navbar-padding-y: 0;
$navbar-content-height: 40px;
$navbar-content-height-bottom: $navbar-content-height - 1;
$navbar-bg: $tale-grey;
$navbar-dark-active-color: $tale-dark-grey;
$navbar-active-bg: $tale-blue;
$navbar-center-size: 92px;

// Forms
$input-bg: $tale-dark-grey;
$input-color: $tale-white;
$input-border-color: $tale-blue;
$input-border-radius: 0;
$form-input-border-top: 1px solid $tale-blue;
$form-input-border-bottom: $form-input-border-top;
$form-input-border-left: $form-input-border-top;
$form-input-border-right: $form-input-border-left;
$form-input-text-offset: $base-offset-x;

// Markdown text input group
$markdown-input-group-offset-x: $base-offset-x;
$markdown-input-group-offset-y: $base-offset-y;
$markdown-input-group-description-margin-y: $base-offset-y / 2;
$markdown-input-group-tab-padding-x: $base-offset-x;
$markdown-input-group-tab-padding-y: $base-offset-y;
$markdown-input-group-tab-bg: $tale-grey;
$markdown-input-group-tab-color: $tale-blue;
$markdown-input-group-active-tab-bg: $tale-dark-grey;
$markdown-input-group-active-tab-color: $tale-white;
$markdown-input-group-border: 1px solid $tale-black;
$markdown-input-group-margin-top-preview-right: 1.5 * $font-size-base + 2 * $markdown-input-group-tab-padding-y;

// Buttons
$border-radius: 0;
$border-radius-sm: 0;
$border-radius-lg: 0;
$button-corner-cut-size: none;
$button-panel-button-gap: $base-offset-x;
$button-panel-padding-top: 0;
$button-panel-padding-bottom: $button-panel-padding-top;
$button-panel-padding-left: $base-offset-x;
$button-panel-padding-right: $button-panel-padding-left;

// Action panel
$action-panel-border: 1px solid $tale-blue;
$action-panel-button-gap: $base-offset-x;
$action-panel-margin-top: $base-offset-y;
$action-panel-margin-bottom: $action-panel-margin-top;
$action-panel-padding-top: $base-offset-y;
$action-panel-padding-bottom: $action-panel-padding-top;
$action-panel-padding-left: $base-offset-x;
$action-panel-padding-right: $action-panel-padding-left;
$action-panel-text-offset-y: $base-offset-y;

// Badges
$badge-corner-cut-size: 3px;
$badge-margin-right: 5px;

// Page
$body-color: $tale-white;
$body-bg: $tale-grey;
$card-bg: $tale-grey;
$dark: $tale-grey;
$content-margin: 20px;
$body-padding-top: $navbar-center-size + $content-margin;
$body-padding-bottom: $body-padding-top;

// Introduction box
$introduction-box-margin-top: $base-offset-y;
$introduction-box-margin-bottom: $introduction-box-margin-top;
$introduction-box-padding-top: $base-offset-y;
$introduction-box-padding-bottom: $introduction-box-padding-top;
$introduction-box-padding-left: $base-offset-x;
$introduction-box-padding-right: $introduction-box-padding-left;
$introduction-box-bg: $tale-dark-grey;
$introduction-box-border: 1px solid $tale-yellow;

// Text box
$text-box-margin-top: $base-offset-y;
$text-box-margin-bottom: $text-box-margin-top;
$text-box-padding-top: $base-offset-y;
$text-box-padding-bottom: $text-box-padding-top;
$text-box-padding-left: $base-offset-x;
$text-box-padding-right: $text-box-padding-left;
$text-box-bg: $tale-dark-grey;

// Home
$home-about-text-padding-top: 20px;
$home-about-text-padding-bottom: 30px;

// Identity image chooser
$identity-image-chooser-size: 12.5rem;
$identity-image-chooser-overlay-color: $body-bg;

// Identity details
$identity-details-image-size: $identity-image-chooser-size;
$identity-details-image-margin-right: $base-offset-x;
$identity-details-text-offset: $base-offset-x;
$identity-details-offset-y: 2 * $base-offset-y;

// Identity editor
$identity-editor-offset-x: $base-offset-x;
$identity-editor-offset-y: 2 * $base-offset-y;
$identity-editor-image-button-offset-y: $base-offset-y / 2;

// Identity skill editor
$identity-skill-editor-offset-x: $base-offset-x;
$identity-skill-editor-offset-y: 2 * $base-offset-y;

// Identity key pair download
$identity-key-pair-download-margin-x: $base-offset-x;
$identity-key-pair-download-margin-y: $base-offset-y;
$identity-key-pair-download-pubkey-font-family: $font-family-monospace;
$identity-key-pair-download-pubkey-font-size: $font-size-sm;

// Skill badge
$skill-badge-padding-x: 0.5rem;
$skill-badge-padding-y: 0.3rem;
$skill-badge-gap: 0.5 * $base-offset-x;
$skill-badge-default-color: $tale-dark-blue;
$skill-badge-default-border: 1px solid $skill-badge-default-color;
$skill-badge-create-color: $tale-blue;
$skill-badge-create-border: 1px solid $skill-badge-create-color;

// Skill selector
$skill-selector-offset-x: $base-offset-x;
$skill-selector-matches-margin-bottom: $base-offset-y;
$identity-skill-editor-current-label-margin-bottom: $base-offset-y / 2;

// Idea skill selector
$idea-skill-selector-offset-x: $base-offset-x;
$idea-skill-selector-offset-y: $base-offset-y;

// Idea list
$idea-list-text-margin-x: $base-offset-x;

// Idea preview
$idea-preview-title-font-size: $font-size-lg;
$idea-preview-timestamp-font-size: $font-size-base;
$idea-preview-bg: $tale-dark-grey;
$idea-preview-hover-bg: lighten($tale-dark-grey, 5%);
$idea-preview-border: 1px solid $tale-black;
$idea-preview-timestamp-color: $tale-light-grey;
$idea-preview-title-margin-bottom: 1.25rem;
$idea-preview-markdown-height: 7.5rem;
$idea-preview-margin-y: 1.5 * $base-offset-y;
$idea-preview-padding-x: $base-offset-x;
$idea-preview-padding-y: $base-offset-y;
$idea-preview-markdown-overlay-bottom: $idea-preview-padding-y + $idea-preview-timestamp-font-size;
$idea-preview-markdown-overlay-height: 3rem;
$idea-preview-hat-border: 1px solid $tale-blue;
$idea-preview-hat-color: $tale-blue;

// Idea details
$idea-details-offset-y: $base-offset-y;
$idea-details-timestamp-font-size: $font-size-base;
$idea-details-timestamp-color: $tale-light-grey;
$idea-commitment-box-border: 1px solid $tale-black;
$idea-commitment-box-tab-color: $tale-blue;
$idea-commitment-box-tab-bg: $tale-grey;
$idea-commitment-box-active-tab-color: $tale-white;
$idea-commitment-box-active-tab-bg: $tale-dark-grey;

// Idea commitment card
$idea-commitment-card-image-size: 4rem;
$idea-commitment-card-content-offset: $idea-commitment-card-image-size + $base-offset-x;
$idea-commitment-card-hat-border: 1px solid $tale-blue;
$idea-commitment-card-hat-color: $tale-blue;

// Idea comments
$idea-comments-margin-top: 2 * $base-offset-y;
$idea-comments-bg: $tale-dark-grey;
$idea-comments-offset-x: $base-offset-x;
$idea-comment-padding-x: $base-offset-x;
$idea-comment-padding-y: $base-offset-y;
$idea-comment-border-bottom: 1px solid $tale-blue;
$idea-comment-reply-form-margin-bottom: $base-offset-y;
$idea-comment-form-offset-x: $base-offset-x;
$idea-comment-form-offset-y: $base-offset-y;
$idea-comment-identity-image-size: 4rem;
$idea-comment-reply-offset: 2 * $idea-comment-padding-x + $idea-comment-identity-image-size;
$idea-comment-identity-name-color: $tale-blue;

// Scrollbar
$scrollbar-border: $navbar-border-width solid $tale-blue;
$scrollbar-thumb-box-shadow: inset 0 0 0 1px $tale-blue;

// Pub list
$pub-list-margin-x: $base-offset-x;
$pub-list-margin-y: $base-offset-y;

// needs to be last line in file so all variables above override bootstrap defaults
@import "../../node_modules/bootstrap/scss/variables";

